# deep_pavements_lite

./: .gitignore  .gitmodules  CONTRIBUTING.md  DEBUG_MODE.md  Dockerfile  GITHUB_ACTIONS_GUIDE.md  README.md  SMOKE_TEST.md  constants.py  download_finetuned_model.py  lib.py  params.json  pyproject.toml  requirements.txt  runner.py  setup.sh  smoke_test.py  smoke_test_enhanced.py  test_cli_debug.py  test_debug_mode.py  test_runner.py  test_segmentation_methods.py
.devcontainer/: devcontainer.json
.github/workflows/: smoke_test.yml
cache/models--kauevestena--clip-vit-base-patch32-finetuned-surface-materials/refs/: main
deep_pavements/: __init__.py  debug.py  geometry.py  pipeline.py  segmentation.py  visualization.py
documentation/: api_reference.md  architecture.md  configuration.md  getting_started.md  index.html
modules/: __init__.py  classification.py  constants.py  debug.py  models.py  pipeline.py  segmentation.py
modules/precaching/: precaching_clip.py  precaching_oneformer.py
my_mappilary_api/: mapillary_api.py  requirements.txt
precaching/: precaching_clip.py
sample_run/: sample.sh
test_data/outputs/metadata/: test_image_color_encoding.json  test_image_mask.npy  test_image_metadata.json
test_data/outputs/reports/: debug_report.html
tests/: conftest.py  run_single_image_test.py  smoke_test.py  test_classification.py  test_geometry.py  test_models.py  test_pipeline.py  test_segmentation.py
