[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deep-pavements-lite"
version = "1.0.0"
description = "Automated pavement surface classification from street-level imagery using CLIP and OneFormer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kauê de Moraes Vestena" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0,<3.0",
    "torchvision>=0.15,<1.0",
    "transformers>=4.30,<5.0",
    "geopandas>=1.0,<2.0",
    "shapely>=2.0,<3.0",
    "pillow>=10.0,<12.0",
    "scikit-image>=0.22,<1.0",
    "scipy>=1.11,<2.0",
    "opencv-python>=4.8,<5.0",
    "requests>=2.31,<3.0",
    "tqdm>=4.60,<5.0",
    "mercantile>=1.2,<2.0",
    "osmnx>=1.5,<3.0",
    "ftfy>=6.1,<7.0",
    "regex>=2023.0",
    "huggingface-hub>=0.20,<1.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "wget>=3.0,<4.0",
    "gpustat>=1.0,<2.0",
    "tabulate>=0.9,<1.0",
    "cmocean>=3.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
deep-pavements = "modules.pipeline:main"

[project.urls]
Homepage = "https://github.com/kauevestena/deep_pavements_lite"
Repository = "https://github.com/kauevestena/deep_pavements_lite"
Issues = "https://github.com/kauevestena/deep_pavements_lite/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
